[package]
name = "cargo-subunit"
version = "0.1.1"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
description = "Cargo extension to run tests and output results in subunit format"
license = "Apache-2.0"
repository = "https://github.com/jelmer/cargo-subunit"

[[bin]]
name = "cargo-subunit"
path = "src/main.rs"

[dependencies]
subunit = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24"
